[package]
name = "foundationdb-s3"
edition.workspace = true

[dependencies]
axum = {workspace = true}
bytes = {workspace = true}
foundationdb = {workspace = true}
futures = "0.3.31"
# foundationdb = {workspace = true}
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
byteorder = "1.5.0"
